--- a/classes/cp_uva.cls
+++ b/classes/cp_uva.cls
@@ -22,6 +22,9 @@
 \RequirePackage{lmodern}
 \RequirePackage{booktabs}
 \RequirePackage{lastpage}
+\RequirePackage{tikz}
+
+\hyphenation{cons-tru-ção con-si-de-ra-da}
 
 \ifpdf
 \RequirePackage[pdftex]{hyperref}
