Atualização da saída do comando gentex -l.

--- a/classes/cp_classic.cls
+++ b/classes/cp_classic.cls
@@ -1,4 +1,4 @@
-% Classic format of competitive problems.
+% Classic format for competitive problems.
 \NeedsTeXFormat{LaTeX2e}
 \ProvidesClass{cp_classic}
 \LoadClass[12pt]{article}
