--- a/classes/cp_classic.cls
+++ b/classes/cp_classic.cls
@@ -121,3 +121,14 @@
 }
 {
 }
+
+\newenvironment{customnotes}[3]{
+	\bigskip
+	\begin{large}
+		\textbf{\translate{#1}{#2}} \\
+	\end{large}
+
+    \input{#3}
+}
+{
+}
