--- a/classes/cp_oj.cls
+++ b/classes/cp_oj.cls
@@ -117,3 +117,14 @@
 }
 {
 }
+
+\newenvironment{customnotes}[3]{
+	\bigskip
+	\begin{large}
+		\textbf{\translate{#1}{#2}} \\
+	\end{large}
+
+    \input{#3}
+}
+{
+}
