Adição do pacote asmmath.

--- a/classes/cp_modern.cls
+++ b/classes/cp_modern.cls
@@ -23,6 +23,7 @@
 \RequirePackage{booktabs}
 \RequirePackage{tikz}
 \RequirePackage{enumerate}
+\RequirePackage{amsmath}
 
 \hyphenation{cons-tru-ção con-si-de-ra-da com-ple-xi-da-de in-di-vi-du-al-men-te}
 
