--- a/classes/cp_classic.cls
+++ b/classes/cp_classic.cls
@@ -21,6 +21,7 @@
 \RequirePackage{verbatim}
 \RequirePackage{tikz}
 \RequirePackage{enumerate}
+\RequirePackage{amsmath}
 
 \hyphenation{cons-tru-ção con-si-de-ra-da com-ple-xi-da-de in-di-vi-du-al-men-te}
 
