--- a/classes/cp_oj.cls
+++ b/classes/cp_oj.cls
@@ -119,6 +119,28 @@
 {
 }
 
+\newcommand{\variosample}[4]
+{
+    \begin{center}
+	\begin{tabular}{p{0.9\textwidth}}
+	\rowcolor{red} \textbf{\textcolor{white}{\translate{Entrada}{Input}}} \\
+    \begin{minipage}[t]{0.9\textwidth}{ \verbatiminput{#3} }
+    \end{minipage} \\
+    \bottomrule
+    \end{tabular}	
+
+    \vspace*{0.05in}
+
+    \begin{tabular}{p{0.9\textwidth}}
+	\hline
+	\rowcolor{red} \textbf{\textcolor{white}{\translate{Saída}{Output}}} \\
+    \begin{minipage}[t]{0.9\textwidth}{ \verbatiminput{#4} }
+    \end{minipage} \\
+    \bottomrule
+    \end{tabular}	
+    \end{center}
+}
+
 \newenvironment{customnotes}[3]{
 
 	\begin{flushleft}
